[project]
name = "research-mcp-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "mcp>=1.11.0",
    "nltk>=3.9.1",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "spacy>=3.8.7",
    "textblob>=0.19.0",
]
